# rim

./: .gitignore  Cargo.toml  README.md  build.rs  configuration.toml  rust-toolchain.toml
.github/workflows/: gui-tests.yml  publish-doc.yml  release-gnu.yml  release.yml  standard-tests.yml
ci/: run.sh
ci/docker/dist-aarch64-linux-gnu/: Dockerfile
ci/docker/dist-aarch64-linux-musl/: Dockerfile
ci/docker/dist-x86-64-linux/: Dockerfile
ci/docker/dist-x86-64-linux-gnu/: Dockerfile
ci/docker/dist-x86-64-linux-musl/: Dockerfile
ci/scripts/: install-tauri-deps.sh  linux-dist.sh  run.sh  upload-release.sh
locales/: en-US.json  en.json  zh-CN.json
resources/: gen_pkg_list.sh  packages.txt  toolkits.toml  toolset_manifest.toml  toolset_manifest_noweb.toml
resources/templates/: env.fish  env.sh
resources/toolkit-manifest/offline/: basic.toml  bisheng.toml  community.toml  test.toml
resources/toolkit-manifest/online/: basic.toml  bisheng.toml  community.toml  test.toml
rim_common/: Cargo.toml
rim_common/src/: build_config.rs  dirs.rs  lib.rs  version_info.rs
rim_common/src/types/: build_config.rs  cargo_registry.rs  (+5 more)
rim_dev/: Cargo.toml  README.md  build.rs
rim_dev/src/: common.rs  dist.rs  locales.rs  main.rs  run.rs  toolkits_parser.rs  vendor.rs
rim_gui/: README.md  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
rim_gui/src/: App.vue  Notification.vue  i18n.ts  main.ts  notification.ts
rim_gui/src-tauri/: Cargo.toml  tauri.conf.json
rim_gui/src-tauri/capabilities/: migrated.json
rim_gui/src-tauri/icons/: icon.icns
rim_gui/src-tauri/src/: command.rs  common.rs  consts.rs  error.rs  installer_mode.rs  main.rs  manager_mode.rs  notification.rs  progress.rs
rim_test/rim-test-support/: Cargo.toml  build.rs
rim_test/rim-test-support/src/: lib.rs  paths.rs  process.rs  project.rs
src/: lib.rs
src/cli/: check.rs  common.rs  component.rs  install.rs  list.rs  mod.rs  tryit.rs  uninstall.rs  update.rs
src/core/: check.rs  components.rs  dependency_handler.rs  directories.rs  install.rs  locales.rs  mod.rs  path_ext.rs  rustup.rs  toolkit.rs  toolkit_manifest_ext.rs  tools.rs  try_it.rs  uninstall.rs  update.rs
src/utils/: download.rs  extraction.rs  file_system.rs  log.rs  mod.rs  process.rs
tests/assets/: hello_world_lib-0.1.0.crate
tests/testsuite/: env.rs  file_extract.rs  file_walker.rs  main.rs
(+304 files in other folders)
