[package]
name = "rim-gui"
version = "0.5.3"
description = "An interactive Rust installation manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "window-all", "dialog-all", "shell-open", "cli"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-shadows = "0.2.2"
rim = { path = "../..", features = [ "gui" ] }
serde_json = "1"
auto-launch = "0.5.0"
###
anyhow.workspace = true
serde.workspace = true
url.workspace = true
toml.workspace = true
tokio.workspace = true
tempfile.workspace = true
indexmap.workspace = true
rust-i18n.workspace = true
log.workspace = true
fern.workspace = true

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
no-web = ["rim/no-web"]
