[package]
name = "rim-gui"
version = "0.7.0"
description = "An interactive Rust installation manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
rim = { path = "../..", features = [ "gui" ] }
rim_common = { path = "../../rim_common" }
serde_json = "1"
auto-launch = "0.5.0"
###
anyhow.workspace = true
serde.workspace = true
url.workspace = true
toml.workspace = true
tokio.workspace = true
tempfile.workspace = true
rust-i18n.workspace = true
log.workspace = true
fern.workspace = true

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
no-web = ["rim/no-web"]

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["winuser", "wincon"] }
